# mini-motherbrain

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
scripts/: validate_search.py
src/mini_motherbrain/: config.py  models.py
src/mini_motherbrain/app/: dashboard.py  figures.py  geo.py
src/mini_motherbrain/app/assets/: style.css
src/mini_motherbrain/app/pages/: companies.py  company.py  home.py
src/mini_motherbrain/es/: client.py  indices.py  mappings.py
src/mini_motherbrain/ingestion/: __main__.py  models.py  pipeline.py
src/mini_motherbrain/ingestion/adapters/: base.py  brreg.py
src/mini_motherbrain/search/: models.py  queries.py  service.py
tests/: test_brreg.py  test_brreg_bulk.py  test_pipeline.py  test_queries.py  test_search_models.py  test_service.py
