[project]
name = "mini-motherbrain"
version = "0.1.0"
description = "Search and analytics platform for Nordic companies."
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.13",
    "dash>=2.16",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_motherbrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
