[project]
name = "mini-motherbrain"
version = "0.1.0"
description = "Search and analytics platform for Nordic companies."
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=9,<10",
    "dash>=2.16",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
mmb-ingest = "mini_motherbrain.ingestion.__main__:main"
mmb-dashboard = "mini_motherbrain.app.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_motherbrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
